registration-report-builder/main/default/objects/Question_Report_Config__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>