registration-report-builder/main/default/objects/Question_Report_Config__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <description>Which report this saved configuration belongs to. Saved reports are listed under the report type they were built in, so a registration report never loads into the enrollment report. Blank means Registrations, which is what reports saved before the enrollment report existed carry.</description>
    <inlineHelpText>Set automatically when the report is saved. Blank counts as Registrations.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registrations</fullName>
                <default>true</default>
                <label>Registrations</label>
            </value>
            <value>
                <fullName>Enrollments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>